# energy-harvesting-primer

./: .pre-commit-config.yaml  LICENSE-MIT.md  LICENSE.md  README.md  app.py  pyproject.toml
.github/workflows/: ci.yaml
.streamlit/: config.toml
energy_harvesting_primer/: __init__.py  utils.py
energy_harvesting_primer/charts/: __init__.py  battery_maintenance_burden.py  color.py  energy_harvesting_process.py  environment_lux.py  power_operating_space.py  power_profile.py  runtime_battery_comparison.py  runtime_no_harvestable_energy.py  runtime_variable_lux.py
energy_harvesting_primer/sensor_profiles/: __init__.py  everactive_environmental_sensor.py
