[tool.poetry]
name = "energy-harvesting-primer"
version = "0.1.2"
description = "Everactive Energy Harvesting Primer"
authors = ["Rachel House <rachel.house@everactive.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^1.5.1"
streamlit = "^1.15.2"
altair = "^4.2.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"
ipykernel = "^6.16.1"
pytest = "^7.1.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
