[tool.poetry]
name = "energy-harvesting-primer"
version = "0.2.2"
description = "Everactive Energy Harvesting Sensors 101 Primer"
authors = ["Rachel House <rachel.house@everactive.com>"]

[tool.poetry.dependencies]
python = ">=3.9.16,<4.0"
pandas = "^1.5.3"
streamlit = "^1.18.1"
altair = "^4.2.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
ipykernel = "^6.21.2"
pytest = "^7.2.1"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
